# mkdocstrings-nim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docs-requirements.txt  mkdocs.yml  nimdocinfo.nimble  pyproject.toml  versions.json
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
0.1.0/: index.html
0.1.0/ci/: index.html
0.1.0/configuration/: index.html
0.1.0/getting-started/: index.html
0.1.2/: 404.html
0.1.2/configuration/: index.html
0.1.2/docstrings/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/ci/: index.html
dev/configuration/: index.html
dev/docstrings/: index.html
dev/getting-started/: index.html
dev/search/: search_index.json
docs/: changelog.md  ci.md  configuration.md  docstrings.md  getting-started.md  index.md
docs/plans/: 2024-11-29-mkdocstrings-nim-design.md  2024-11-29-mkdocstrings-nim-implementation.md  2025-11-30-packaging-fixes-design.md  2025-11-30-packaging-fixes.md
mkdocstrings_handlers/: __init__.py
mkdocstrings_handlers/nim/: __init__.py  collector.py  docstring.py  handler.py
mkdocstrings_handlers/nim/extractor/: extractor.nim  nimdocinfo.nim
mkdocstrings_handlers/nim/templates/material/: func.html.jinja  iterator.html.jinja  style.css  template.html.jinja
tests/: __init__.py  test_collector.py  test_docstring.py  test_handler.py  test_templates.py  test_type_fields.py
tests/fixtures/: simple.nim  types_with_fields.nim
tests/integration/: __init__.py  test_full_flow.py  test_type_fields.py
(+9 files in other folders)
