[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocstrings-nim"
version = "0.1.0"
description = "A Nim handler for mkdocstrings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Elijah Rutschman" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mkdocstrings>=0.20",
    "Jinja2>=3.0",
    "docstring-parser>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mike>=2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-glightbox>=0.3",
    "pymdown-extensions>=10.0",
]

[project.entry-points."mkdocstrings.handlers"]
nim = "mkdocstrings_handlers.nim:get_handler"

[tool.hatch.build.targets.wheel]
packages = ["mkdocstrings_handlers"]

[tool.hatch.build]
include = [
    "mkdocstrings_handlers/**/*.py",
    "mkdocstrings_handlers/**/*.jinja",
    "mkdocstrings_handlers/**/*.css",
    "mkdocstrings_handlers/**/*.nim",
]
